# auto-bin

./: Cargo.toml  Readme.md
src/: main.rs
